[package]
name = "ilv6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
fbxcel = "0.9.0"
fbxcel-dom = "0.0.10"
globwalk = "0.8.1"
path-absolutize = "3.1.1"
serde = { version= "1.0.193" , features = ["derive"]}
serde_json = "1.0.108"


